#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem: This files describes release notes for
#       the StreamDevice Support for the Coherent EPM2000, 
#       a laser power meter.      
#
#  Auth: 01-Apr-2008  Matt Boyes         (mboyes)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------
#  Mod:
#        06-May-2011, M. Boyes           (MBOYES):
#          release epm2000-R2-2-1:
#        20-Mar-2010, S. Hoobler         (SONYA):
#          release epm2000-R2-2-0:
#        30-Apr-2009, K. Luchini         (LUCHINI):
#          release epm2000-R2-0-0:
#
#==============================================================
#
epm2000-R2-2-1:   Removed TSEL=@ bug
		  Build with base-R3-14-8-2-lcls6
                  Build with rtems-4.9.4

epm2000-R2-2-0:   Build with base-R3-14-8-2-lcls6
                  Build with rtems-4.9.4

epm2000-R2-1-0:   Build with base-R3-14-8-2-lcls5
                  Build with rtems-4.9.3

epm2000-R2-0-0:   Build with base-R3-14-8-2-lcls3 (RTEMS-4.9.1)

epm2000-R1-0-3:   Added support from EPM1000, a single channel version. Note: Avg Mode 
                  does not match out dump data string.

epm2000-R1-0-2:   Added support for a single channel device. Users of single channel 
                  devices can disable ch(x) by setting ch(x)_scan to Passive in the 
                  subsitutions file, see epm2000example.substitutions.

epm2000-R1-0-1:   Added support for Thermopile sensor and simplified database template.

epm2000-R1-0-0:   Initial release.
