@@ -2,40 +2,23 @@
 # Run "gnumake clean uninstall install" in the application
 # top directory each time this file is changed.
 include $(TOP)/RELEASE_SITE
+TEMPLATE_TOP=$(EPICS_BASE)/templates/makeBaseApp/top
 
-# =============================================================
-# Define the top of the EPICS tree for your site.
-# We will build some tools/scripts that allow us to
-# change this easily when relocating software.
-# ==============================================================
-# 
-#EPICS_SITE_TOP=/usr/local/lcls/epics
+# If you don't want to install into $(TOP) then
+# define INSTALL_LOCATION_APP here
+#INSTALL_LOCATION_APP=<fullpathname>
 
-# =============================================================
-# Define location of module tree with respect to
-# EPICS_SITE_TOP
-# =============================================================
-EPICS_MODULES=$(EPICS_SITE_TOP)/modules
 
-# ==============================================================
-# Define the version of EPICS BASE that you will use
-# =============================================================
-BASE_MODULE_VERSION=base-R3-14-8-2-lcls6
-
-# =============================================================
-# Define the version of modules needed by
-# IOC apps or other Support apps
-# =============================================================
-
-# ============================================================
-# Support module locations
-# ============================================================
+# ===========================================================
+# Define the cvs module version that you will use
+# ==========================================================
+BASE_MODULE_VERSION=$(EPICS_BASE_VER)
 
 # =================================================================
 # Define EPICS_BASE
 # EPICS_BASE usually appears last so other apps can override stuff:
 # =================================================================
-EPICS_BASE=$(EPICS_SITE_TOP)/base/$(BASE_MODULE_VERSION)
+EPICS_BASE=$(BASE_SITE_TOP)/$(BASE_MODULE_VERSION)
 
 # End of file
 
