@@ -1,0 +1,2 @@
+FILE_TYPE +=  EDL
+INSTALL_EDL = $(INSTALL_LOCATION)/display
